--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,19 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
   audioplayers: ^6.0.0
-
+  permission_handler: ^11.3.1
+  path_provider: ^2.1.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/music_icon.png"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
